--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,11 @@ a {
 	padding: 0 0 13px 0;
 }
 
+.number__main {
+	font-size: 16px;
+	font-weight: 800;
+}
+
 @media (max-width:1200px) {
 	.wrapper {
 		max-width: 970px;
